--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import './components/assets/css/themes/defaultDark/defaultDark.css';
+@import './components/assets/css/themes/theme.css';
 
 .App {
   position: absolute;
@@ -15,13 +15,14 @@
 }
 
 .App-header {
-  min-height: 100px;
+  min-height: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  display: none;
 }
 
 .App-link {
@@ -30,6 +31,8 @@
 
 .App-Container {
   padding: 20px;
+  height: calc(100vh - 70px);
+  padding-top: 50px;
 }
 
 @keyframes App-logo-spin {
