--- a/src/components/assets/css/env.css
+++ b/src/components/assets/css/env.css
@@ -4,8 +4,25 @@
     scrollbar-width: none;
     /*IE10+*/
     -ms-overflow-style: -ms-autohiding-scrollbar;
+    margin: 0;
+    padding: 0;
   }
   ::-webkit-scrollbar {
     /*Chrome, Safari, Edge*/
     display: none;
+  }
+
+  button{
+    background-color:transparent;
+    border: 0;
+  }
+  .test {
+    background-color: transparent;
+    border: 1px dotted #ff0000;
+    color: #ff0000;
+  }
+
+  a {
+    color: #0033ff;
+    text-decoration: dashed;
   }
