--- a/src/components/assets/css/colors.css
+++ b/src/components/assets/css/colors.css
@@ -1,4 +1,22 @@
 :root {
- --color-gray: #14333c;
- --color-darker: #333333;
+    --color-transparent: #00000000;
+    --color-angel-white: #fefefe;
+    
+    --color-oceans-background: #14333c;
+    --color-ocean-green: #073a4a;
+    --color-ocean-ground: #0b2936;
+    --color-ocean-pale-blue: #46798f;
+    --color-ocean-dark-blue: #1e4e66;
+    --color-ocean-forgotten-blue: #104450;
+
+    --color-heart-green: #57f2be;
+
+    --color-darker: #333333;
+
+    --color-uv: #7457ff;
+    --color-citrus: #fdff6e;
+    --color-sky: #4999ff;
+    --color-lipstick: #ff497c;
+    --color-carrot: #ff9049;
+ 
 }
