--- a/src/components/assets/css/themes/deepOcean/deepOcean.css
+++ b/src/components/assets/css/themes/deepOcean/deepOcean.css
@@ -1,10 +1,31 @@
 @import '../../index.css';
 
 :root {
-    --color-main: var(--color-gray);
     --color-darker: #333333;
+
+    --color-background: var(--color-oceans-background);
+    --color-primary: var(--color-ocean-green);
+    --color-secondary: var(--color-ocean-ground);
+    --color-tertiary: var(--color-ocean-forgotten-blue);
+
+    --color-input: var(--color-ocean-dark-blue);
+    --color-highlight: var(--color-heart-green);
+
+    --color-placeholder: var(--color-oceans-background);
+    --color-text: var(--color-ocean-pale-blue);
+    --color-text-light: var(--color-angel-white);
+
+    --color-homeoffice: var(--color-uv);
+    --color-vacation: var(--color-citrus);
+    --color-training: var(--color-sky);
+    --color-ill: var(--color-lipstick);
+    --color-absent: var(--color-carrot);
+
     --borderradius-default: 20px;
     --transition-default: 0.3s;
+
+    --box-shadow-default: #00000024 -1px 18px 60px 5px;
+    --opacity-nofocuse: 0.5;
    }
 
  ::-webkit-calendar-picker-indicator {
@@ -17,6 +38,7 @@ div {
 
 p {
     font-family: 'Roboto', sans-serif;
+    user-select: none;
 }
 
 h1, h2 ,h3 ,h4 ,h5 ,h6 {
@@ -25,9 +47,48 @@ h1, h2 ,h3 ,h4 ,h5 ,h6 {
 
 button, a {
     font-family: 'Roboto', sans-serif;
+    cursor: pointer;
+    user-select: none;
 }
 
 .icon {
     fill: white;
     transition: 0.3s;
+}
+
+.Dialog-Titel {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #2f4f59;
+    text-transform: uppercase;
+    font-size: 16px;
+    user-select: none;
+}
+
+.Text-Default {
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+textarea {
+    font-family: 'Roboto', sans-serif;
+}
+
+textarea::placeholder {
+    color: var(--color-placeholder);
+}
+
+.Button-Save{
+    padding: 10px 20px;
+    border: 2px solid var(--color-highlight);
+    border-radius: 20px;
+    color: var(--color-text-light);
+    transition: var(--transition-default);
+    font-size: 14px;
+    font-family: system-ui,  Roboto, sans-serif;
+}
+
+.Button-Save:hover{
+    background-color: var(--color-highlight);
+    color: var(--color-secondary);
 }
