--- a/src/components/content/molecules/buttons/ButtonAddStatus/ButtonAddStatus.css
+++ b/src/components/content/molecules/buttons/ButtonAddStatus/ButtonAddStatus.css
@@ -1,7 +1,7 @@
 .Button-AddStatus{
     width: 100px;
     height: 100px;
-    border: 2px solid #57f2be00;
+    border: 2px solid var(--color-transparent);
     border-radius: 20px;
     display: flex;
     flex-flow: column;
@@ -9,29 +9,52 @@
     align-items: center;
     padding-top: 20px;
     transition: var(--transition-default);
-    color: #46798f;
+    color: var(--color-text);
+    cursor: pointer;
 }
 
 .Button-AddStatus .icon {
     width: 50px;
     height: 50px;
-    fill: #46798f;
+    fill: var(--color-text);
 }
 
 .Button-AddStatus:hover{
-    border-color: #fefefe;
-    color: #fefefe;
+    border-color: var(--color-text-light);
+    color: var(--color-text-light);
 }
 
 .Button-AddStatus:hover .icon{
-    fill: #fefefe;
+    fill: var(--color-text-light);
 }
 
-.Button-AddStatus--active{
-    border-color: #57f2be;
-    color: #57f2be;
+.Button-AddStatus-Object {
+    user-select: none;
 }
 
-.Button-AddStatus--active .icon{
-    fill: #57f2be;
+.Button-AddStatus-Object--active .Button-AddStatus{
+    border-color: var(--color-highlight);
+    color: var(--color-highlight);
+    user-select: none;
+}
+
+.Button-AddStatus-Object--active #button-addstatus_0 .icon{
+    fill: var(--color-homeoffice);
+}
+
+.Button-AddStatus-Object--active #button-addstatus_1 .icon{
+    fill: var(--color-vacation);
+}
+
+
+.Button-AddStatus-Object--active #button-addstatus_2 .icon{
+    fill: var(--color-training);
+}
+
+.Button-AddStatus-Object--active #button-addstatus_3 .icon{
+    fill: var(--color-ill);
+}
+
+.Button-AddStatus-Object--active #button-addstatus_4 .icon{
+    fill: var(--color-carrot);
 }
