--- a/src/components/content/calendar/Calendar.css
+++ b/src/components/content/calendar/Calendar.css
@@ -65,7 +65,7 @@
 .Day-Label {
     width: auto;
     text-align: center;
-    color: #46798f;
+    color: var(--color-text);
     font-family: 'Roboto', sans-serif;
 }
 
@@ -75,7 +75,7 @@
     margin-block-start: 0;
     margin-block-end: 0;
     z-index: 0;
-    color: #0f4450;
+    color: var(--color-tertiary);
     position: absolute;
     margin-top: -35px;
     opacity: 0.5;
@@ -98,7 +98,7 @@
 
 .Menu :hover{
     cursor: pointer;
-    fill: #57f2be;
+    fill: var(--color-highlight);
 }
 
 .CurrentDate-Text{
@@ -116,10 +116,11 @@
     height: 40px;
     transition: 0.3s;
     cursor: pointer;
+    transition: var(--transition-default);
 }
 
 .Button-Month-Back:hover .icon{
-fill: #57f2be;
+    fill: var(--color-highlight);
 }
 
 .Button-Month-For{
@@ -128,20 +129,22 @@ fill: #57f2be;
     height: 40px;
     transition: 0.3s;
     cursor: pointer;
+    transition: var(--transition-default);
 }
 
 .Button-Month-For:hover .icon{
-fill: #57f2be;
+fill: var(--color-highlight);
 }
 
 .Button-Month-Today{
     border: 0;
     width: 60px;
     height: 40px;
-    color: #fefefe;
+    color: var(--color-text-light);
     cursor: pointer;
+    transition: var(--transition-default);
 }
 
 .Button-Month-Today:hover {
-    color: #57f2be;
+    color: var(--color-highlight);
 }
