--- a/src/components/content/modules/AddBox/AddBox.css
+++ b/src/components/content/modules/AddBox/AddBox.css
@@ -1,37 +1,91 @@
 .AddBox{
     position: absolute;
     border-radius: 20px;
-    background-color: #0b2936;
+    background-color: var(--color-secondary);
     z-index: 100;
     padding:20px;
+    box-shadow: var(--box-shadow-default);
+}
+
+.AddBox-Hidden{
+    display: none;
+}
+
+.AddBox-Headline {
+    width: 100%;
+    height: 20px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .AddBox-Container-Buttons{
     display: flex;
     align-self: center;
     justify-content: center;
-    padding-bottom: 20px;
+    padding: 20px 0px;
 }
 
 .AddBox-Container-Dates {
     display: flex;
+    color: var(--color-text-light);
+    align-items: center;
+    padding: 0px 20px;
+    width: calc(100% - 40px);
+    justify-content: space-between;
+    padding-top: 20px;
 }
 
 .AddBox-Container-Notes {
     display: flex;
     justify-content: center;
+    padding-top: 20px;
 }
 
 .AddBox-Date-Input {
-    background-color: #1e4e66;
-    border: oldlace;
+    background-color: var(--color-input);
+    border: 0;
     border-radius: 20px;
     padding: 10px;
     height: 16px;
-    color: #fefefe;
+    color: var(--color-text-light);
+    margin: 0px 10px;
 }
 
 .AddBox-Date-Input:active, .AddBox-Date-Input:focus{
-    outline: 2px solid #57f2be;
+    outline: 2px solid var(--color-highlight);
+}
+
+.AddBox-Textarea {
+    width: 100%;
+    height: 40px;
+    border-radius: 20px;
+    padding: 20px;
+    background-color: var(--color-input);
+    border: 0;
+    color: var(--color-text-light);
+}
+
+.AddBox-Textarea:active, .AddBox-Textarea:focus {
+    outline: 2px solid var(--color-highlight);
+}
+
+.Button-Close-Dialog .icon{
+    width: 16px;
+    height: 16px;
+    cursor: pointer;
+    transition: var(transition-default);
+}
+
+.Button-Close-Dialog:hover .icon{
+    width: 16px;
+    height: 16px;
+    fill: var(--color-lipstick);
+}
+
+.AddBox-Container-SaveButton{
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
