--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,8 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: var(--color-text);
   display: none;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 .App-Container {
