--- a/src/components/assets/css/colors.css
+++ b/src/components/assets/css/colors.css
@@ -1,5 +1,6 @@
 :root {
     --color-transparent: #00000000;
+    --color-black: #000;
     --color-angel-white: #fefefe;
     
     --color-oceans-background: #14333c;
