--- a/src/components/assets/css/themes/deepOcean/deepOcean.css
+++ b/src/components/assets/css/themes/deepOcean/deepOcean.css
@@ -25,7 +25,7 @@
     --transition-default: 0.3s;
 
     --box-shadow-default: #00000024 -1px 18px 60px 5px;
-    --opacity-nofocuse: 0.5;
+    --opacity-nofocus: 0.5;
    }
 
  ::-webkit-calendar-picker-indicator {
@@ -53,7 +53,7 @@ button, a {
 
 .icon {
     fill: white;
-    transition: 0.3s;
+    transition: var(--transition-default);
 }
 
 .Dialog-Titel {
