--- a/src/components/content/modules/Entry/Entry.css
+++ b/src/components/content/modules/Entry/Entry.css
@@ -1,9 +1,8 @@
-
 .Entry{
     width: calc(100% - 20px);
     background-color: var(--color-input);
     color: var(--color-text-light);
-    border-radius: 6px;
+    border-radius: var(--borderradius-small);
     overflow: hidden;
     font-size: 12px;
     display: flex;
@@ -12,6 +11,7 @@
     margin-bottom: 4px;
     opacity: var(--opacity-nofocus);
 }
+
 .Entry-Name{
     padding-left: 8px;
     margin-block-start: 0;
