--- a/src/components/content/modules/Entry/Entry.css
+++ b/src/components/content/modules/Entry/Entry.css
@@ -12,6 +12,10 @@
     opacity: var(--opacity-nofocus);
 }
 
+.Entry-Hidden {
+    display: none;
+}
+
 .Entry-Name{
     padding-left: 8px;
     margin-block-start: 0;
